[package]
name = "th-commit"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tool to create git commits with AI-generated messages using Theater"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local dependency on theater
theater = { path = "/Users/colinrozzi/work/theater" }
