[package]
name = "th-commit"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tool to create git commits with AI-generated messages using Theater"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
terminal_size = "0.2"
chrono = "0.4"

# Theater dependencies - using the actual Theater client
theater-client = { path = "/Users/colinrozzi/work/theater/crates/theater-client" }
theater-server = { path = "/Users/colinrozzi/work/theater/crates/theater-server" }
theater = { path = "/Users/colinrozzi/work/theater/crates/theater" }

[[bin]]
name = "commit"
path = "src/main.rs"
